# OTUS_python_base

./: .gitignore  README.md  pyproject.toml  requirement.txt  requirements-dev.txt  requirements.txt
graduate_work/: Makefile  README.md  manage.py  pyproject.toml
graduate_work/products/: admin.py  forms.py  models.py  urls.py  views.py
graduate_work/products/fixtures/: categories.json  products.json
graduate_work/products/migrations/: 0001_initial.py
graduate_work/products/templates/products/: base.html  basket.html  index.html  product_details.html  products.html
graduate_work/settings/: settings.py  urls.py
graduate_work/static/css/: index.css  main.min.css
graduate_work/users/: admin.py  forms.py  urls.py  views.py
graduate_work/users/migrations/: 0001_initial.py
graduate_work/users/templates/users/: login.html  profile.html  register.html
homework_01/: main.py
homework_02/: README.md  base.py  car.py  exceptions.py  plane.py
homework_03/: Dockerfile  README.md  main.py  pyproject.toml
homework_04/: config.py  docker-compose.yaml  jsonplaceholder_requests.py  main.py  models.py  pyproject.toml
homework_04/postgres_data/base/1/: 1259  2619  2619_vm  2696
homework_04/postgres_data/base/5/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1259  1259_fsm  1259_vm  2224  2224_vm  2579  2604  2604_vm  2606  2606_fsm  2606_vm  2608  2608_fsm  2608_vm  2610  2610_fsm  2610_vm  2619  2619_fsm  2619_vm  2620  2620_vm  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  (+23 more)
homework_04/postgres_data/global/: 1260  pg_control
homework_04/postgres_data/pg_stat/: pgstat.stat
homework_04/postgres_data/pg_xact/: 0000
homework_05/: README.md  app.py  pyproject.toml
homework_05/templates/: about.html  base.html
homework_05/views/: views.py
homework_06/: .gitignore  docker-compose.yaml  pyproject.toml
homework_06/db_data/pgdata/: postmaster.pid
homework_06/db_data/pgdata/base/1/: pg_internal.init
homework_06/db_data/pgdata/base/5/: pg_internal.init
homework_06/db_data/pgdata/global/: 1260  pg_control  pg_internal.init
homework_06/docker-build/: Dockerfile
homework_07/: Makefile  pyproject.toml
homework_07/blog/: admin.py  views.py
homework_07/blog/migrations/: 0001_initial.py
homework_07/blog/templates/blog/post/: list.html
homework_07/settings/: settings.py  urls.py
homework_08/: appmap.yml  pyproject.toml  sql_.sql
homework_08/blog/: models.py  views.py
homework_08/blog/templates/blog/post/: detail.html  list.html
homework_08/settings/: settings.py  urls.py
homework_08/templates/: base.html
homework_08/templates/common/: footer-common.html
