[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["a.kravtsov <kraftsov@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = { extras = ["all"], version = "^23.10.1" }
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
aiohttp = "^3.9.0"
asyncpg = "^0.29.0"
alembic = "^1.12.1"
pytest = "^7.4.3"
docker = "^6.1.3"
faker = "^20.1.0"
pytest-asyncio = "^0.23.0"
flask = "^3.0.0"
utils = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
