[tool.poetry]
name = "homework-03"
version = "0.1.0"
description = ""
authors = ["Aleksandr <kraftsov@gmail.com>"]
readme = "README.md"
#packages = [{include = "homework_03"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
