[tool.poetry]
name = "homework-03"
version = "0.1.0"
description = ""
authors = ["Aleksandr <kraftsov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
fastapi = "^0.101.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
