[tool.poetry]
name = "homework-04"
version = "0.1.0"
description = ""
authors = ["kraft <kraf__@g__.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.29.0"
psycopg = "^3.1.13"
alembic = "^1.12.1"
requests = "^2.31.0"
aiohttp = "^3.9.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
