[tool.poetry]
name = "homework-06"
version = "0.1.0"
description = ""
authors = ["kraft <kraf@g_.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.24"
flask-migrate = "^4.0.5"
psycopg = "^3.1.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
